<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nprezive.cs3270a3.FragmentIndividual">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_caption" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_sub_caption"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_pick"/>
        <Button
            android:id="@+id/btn_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rock"/>
        <Button
            android:id="@+id/btn_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paper"/>
        <Button
            android:id="@+id/btn_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scissors"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_pick"/>
        <TextView
            android:id="@+id/txv_phone_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_mark"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txv_game_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_result"
        android:textColor="@color/colorAccent"/>

</LinearLayout>
